修复spring-boot-admin与jdk11不兼容问题

--- a/spring-boot-demo-properties/pom.xml
+++ b/spring-boot-demo-properties/pom.xml
@@ -64,6 +64,13 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+    <!--可以直接在yaml或者properties文件中使用pom文件中定义的标签： @version@-->
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>true</filtering>
+      </resource>
+    </resources>
 	</build>
 
 </project>
