--- a/spring-boot-demo-admin-client/pom.xml
+++ b/spring-boot-demo-admin-client/pom.xml
@@ -20,7 +20,9 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
-		<spring-boot-admin.version>2.0.3</spring-boot-admin.version>
+    <!--For spring boot 2.1.x you need to use one of our 2.1.0-SNAPSHOT versions or higher-->
+    <!--https://github.com/codecentric/spring-boot-admin/issues/953-->
+		<spring-boot-admin.version>2.1.0</spring-boot-admin.version>
 	</properties>
 
 	<dependencies>
@@ -45,7 +47,7 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-
+<!--当前模块会使用到，如果有子模块继承此父模块，则需要{{显示的}}写出继承语句-->
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
